--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,7 @@
 <head>
         <meta charset="utf-8">
         <title>Frantic1048's Blog</title>
-        <link rel="stylesheet" href="Frantic1048.github.com/theme/css/main.css">
-                <link href="Frantic1048.github.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Frantic1048's Blog Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css">
                 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,9 +12,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="Frantic1048.github.com/">Frantic1048's Blog </a></h1>
+                <h1><a href="/">Frantic1048's Blog </a></h1>
                 <nav><ul>
-                                                                                    <li ><a href="Frantic1048.github.com/category/life.html">Life</a></li>
+                                                                                    <li ><a href="/category/life.html">Life</a></li>
                                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
@@ -23,7 +22,7 @@
 
 <dl>
     <dt>四 06 六月 2013</dt>
-    <dd><a href="Frantic1048.github.com/my-super-beginng.html">My Super Beginng</a></dd>
+    <dd><a href="/my-super-beginng.html">My Super Beginng</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -38,7 +37,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="Frantic1048.github.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/None" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="#">You can add links in your config file</a></li>
                                                     <li><a href="#">Another social link</a></li>
