--- a/archives.html
+++ b/archives.html
@@ -63,7 +63,8 @@
           <a class="brand" href="/index.html">Frantic World </a>
           <div class="nav-collapse">
             <ul class="nav">
-                                                                    <li class="divider-vertical"></li>
+                                                          <li><a href="/pages/about.html">About</a></li>
+                                        <li class="divider-vertical"></li>
                                               <li >
                     <a href="/category/life.html">
 						<i class="icon-folder-open icon-large"></i>Life
