--- a/pages/about.html
+++ b/pages/about.html
@@ -66,8 +66,13 @@
                                                           <li><a href="/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
                                               <li >
-                    <a href="/category/life.html">
-						<i class="icon-folder-open icon-large"></i>Life
+                    <a href="/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>Blog
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/misc.html">
+						<i class="icon-folder-open icon-large"></i>Misc
 					</a>
                   </li>
               
@@ -90,7 +95,10 @@
                 <h1>This Blog</h1>
 <p>如你所见，如你所想。</p>
 <h1>Me</h1>
-<p>一个想要成为技术宅的小白，软件控，禁止事项。</p>
+<p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
+<h1>License</h1>
+<p><a href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh" title="署名-相同方式共享 3.0 未本地化版本">![cc-by-sa]</a></p>
+<p>本站所有作品均采用<a href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh" title="署名-相同方式共享 3.0 未本地化版本">CC BY-SA 3.0</a>协议进行许可</p>
 </section>
         </div><!--/span-->
 
@@ -106,15 +114,35 @@
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
-<a href="/category/life.html">
-    <i class="icon-folder-open icon-large"></i>Life
+<a href="/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>Blog
+</a>
+</li>
+<li>
+<a href="/category/misc.html">
+    <i class="icon-folder-open icon-large"></i>Misc
 </a>
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-    <a href="/tag/lifeblog.html">
-        <i class="icon-tag icon-large"></i>Life，blog
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
