--- a/archives.html
+++ b/archives.html
@@ -66,8 +66,13 @@
                                                           <li><a href="/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
                                               <li >
-                    <a href="/category/life.html">
-						<i class="icon-folder-open icon-large"></i>Life
+                    <a href="/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>Blog
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/misc.html">
+						<i class="icon-folder-open icon-large"></i>Misc
 					</a>
                   </li>
               
@@ -89,8 +94,10 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
-	<dt>四 06 六月 2013</dt>
-	<dd><a href='my-super-beginng.html'>My Super Beginng</a></dd>
+	<dt>Mon 17 June 2013</dt>
+	<dd><a href='gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html'>给windows添加用Notepad++打开的右键菜单</a></dd>
+	<dt>Mon 17 June 2013</dt>
+	<dd><a href='windowsxia-an-zhuang-he-shi-yong-pelican.html'>Windows下安装和使用Pelican</a></dd>
 </dl>
 </section>
         </div><!--/span-->
@@ -107,15 +114,35 @@
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
-<a href="/category/life.html">
-    <i class="icon-folder-open icon-large"></i>Life
+<a href="/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>Blog
+</a>
+</li>
+<li>
+<a href="/category/misc.html">
+    <i class="icon-folder-open icon-large"></i>Misc
 </a>
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-    <a href="/tag/lifeblog.html">
-        <i class="icon-tag icon-large"></i>Life，blog
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
