--- a/tags.html
+++ b/tags.html
@@ -66,8 +66,13 @@
                                                           <li><a href="/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
                                               <li >
-                    <a href="/category/life.html">
-						<i class="icon-folder-open icon-large"></i>Life
+                    <a href="/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>Blog
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/misc.html">
+						<i class="icon-folder-open icon-large"></i>Misc
 					</a>
                   </li>
               
@@ -88,8 +93,23 @@
             <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-	<a href="/tag/lifeblog.html">
-		<i class="icon-tag icon-large"></i>Life，blog
+	<a href="/tag/blog.html">
+		<i class="icon-tag icon-large"></i>Blog
+	</a>
+</li>
+<li class="tag-4">
+	<a href="/tag/windows.html">
+		<i class="icon-tag icon-large"></i>Windows
+	</a>
+</li>
+<li class="tag-4">
+	<a href="/tag/pelican.html">
+		<i class="icon-tag icon-large"></i>Pelican
+	</a>
+</li>
+<li class="tag-4">
+	<a href="/tag/life.html">
+		<i class="icon-tag icon-large"></i>Life
 	</a>
 </li>
 </ul>
@@ -107,15 +127,35 @@
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
-<a href="/category/life.html">
-    <i class="icon-folder-open icon-large"></i>Life
+<a href="/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>Blog
+</a>
+</li>
+<li>
+<a href="/category/misc.html">
+    <i class="icon-folder-open icon-large"></i>Misc
 </a>
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-    <a href="/tag/lifeblog.html">
-        <i class="icon-tag icon-large"></i>Life，blog
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
