fixed about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -87,8 +87,7 @@
 <h1>Me</h1>
 <p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
 <h1>License</h1>
-<p>![cc-by-sa]</p>
-<p>本站所有作品均采用<a href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh" title="署名-相同方式共享 3.0 未本地化版本">CC BY-SA 3.0</a>协议进行许可</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh"><img alt="知识共享许可协议" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />本站所有作品采用<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">CC BY-SA 3.0协议</a>进行许可。</p>
 </section>
         </div><!--/span-->
 
