--- a/archives.html
+++ b/archives.html
@@ -65,7 +65,22 @@
             <ul class="nav">
                                                           <li><a href="/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
-                            
+                                              <li >
+                    <a href="/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>Blog
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/life.html">
+						<i class="icon-folder-open icon-large"></i>Life
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/misc.html">
+						<i class="icon-folder-open icon-large"></i>Misc
+					</a>
+                  </li>
+              
                           <ul class="nav pull-right">
                                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
                           </ul>
@@ -84,6 +99,12 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>Mon 17 June 2013</dt>
+	<dd><a href='gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html'>给windows添加用Notepad++打开的右键菜单</a></dd>
+	<dt>Mon 17 June 2013</dt>
+	<dd><a href='windowsxia-an-zhuang-he-shi-yong-pelican.html'>Windows下安装和使用Pelican</a></dd>
+	<dt>Thu 06 June 2013</dt>
+	<dd><a href='my-super-beginng.html'>My Super Beginng</a></dd>
 </dl>
 </section>
         </div><!--/span-->
@@ -99,8 +120,48 @@
     <li><a href="#"><i class="icon-----sign icon-large"></i>---</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li>
+<a href="/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>Blog
+</a>
+</li>
+<li>
+<a href="/category/life.html">
+    <i class="icon-folder-open icon-large"></i>Life
+</a>
+</li>
+<li>
+<a href="/category/misc.html">
+    <i class="icon-folder-open icon-large"></i>Misc
+</a>
+</li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/lifeblog.html">
+        <i class="icon-tag icon-large"></i>Life，blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
 
 
 </ul>        </div><!--/.well -->
