--- a/categories.html
+++ b/categories.html
@@ -65,7 +65,22 @@
             <ul class="nav">
                                                           <li><a href="/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
-                            
+                                              <li >
+                    <a href="/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>Blog
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/life.html">
+						<i class="icon-folder-open icon-large"></i>Life
+					</a>
+                  </li>
+                                <li >
+                    <a href="/category/misc.html">
+						<i class="icon-folder-open icon-large"></i>Misc
+					</a>
+                  </li>
+              
                           <ul class="nav pull-right">
                                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
                           </ul>
@@ -81,6 +96,9 @@
       <div class="row">
         <div class="span9" id="content">
             <ul>
+	<li><a href="category/blog.html">Blog</a></li>
+	<li><a href="category/life.html">Life</a></li>
+	<li><a href="category/misc.html">Misc</a></li>
 </ul>
         </div><!--/span-->
 
@@ -95,8 +113,48 @@
     <li><a href="#"><i class="icon-----sign icon-large"></i>---</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li>
+<a href="/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>Blog
+</a>
+</li>
+<li>
+<a href="/category/life.html">
+    <i class="icon-folder-open icon-large"></i>Life
+</a>
+</li>
+<li>
+<a href="/category/misc.html">
+    <i class="icon-folder-open icon-large"></i>Misc
+</a>
+</li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/lifeblog.html">
+        <i class="icon-tag icon-large"></i>Life，blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
 
 
 </ul>        </div><!--/.well -->
