--- a/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
+++ b/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
@@ -70,6 +70,11 @@
 						<i class="icon-folder-open icon-large"></i>Blog
 					</a>
                   </li>
+                                <li >
+                    <a href="/category/life.html">
+						<i class="icon-folder-open icon-large"></i>Life
+					</a>
+                  </li>
                                 <li class="active">
                     <a href="/category/misc.html">
 						<i class="icon-folder-open icon-large"></i>Misc
@@ -168,6 +173,11 @@
 </a>
 </li>
 <li>
+<a href="/category/life.html">
+    <i class="icon-folder-open icon-large"></i>Life
+</a>
+</li>
+<li>
 <a href="/category/misc.html">
     <i class="icon-folder-open icon-large"></i>Misc
 </a>
@@ -180,18 +190,23 @@
     </a>
 </li>
 <li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
     <a href="/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
+    <a href="/tag/lifeblog.html">
+        <i class="icon-tag icon-large"></i>Life，blog
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
+    <a href="/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
