fixed firstblog's tag

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 
 
 <span class="label">Tags</span>
-	<a href="/tag/lifeblog.html"><i class="icon-tag"></i>Life，blog</a>
+	<a href="/tag/life.html"><i class="icon-tag"></i>Life</a>
+	<a href="/tag/blog.html"><i class="icon-tag"></i>blog</a>
 </footer><!-- /.post-info --></div>
                 <div class="summary"><p>Frantic1048's Blog is beginning from NOW , HERE !</p>
                         <a class="btn primary xsmall" href="/my-super-beginng.html">more ...</a>
@@ -224,29 +225,24 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
-<li class="tag-4">
+<li class="tag-1">
     <a href="/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
     </a>
 </li>
-<li class="tag-4">
+<li class="tag-1">
     <a href="/tag/life.html">
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/lifeblog.html">
-        <i class="icon-tag icon-large"></i>Life，blog
-    </a>
-</li>
-<li class="tag-4">
     <a href="/tag/pelican.html">
         <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 
