--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 	<a href="/tag/blog.html"><i class="icon-tag"></i>Blog</a>
 	<a href="/tag/life.html"><i class="icon-tag"></i>Life</a>
 	<a href="/tag/pelican.html"><i class="icon-tag"></i>Pelican</a>
+	<a href="/tag/windows.html"><i class="icon-tag"></i>Windows</a>
 </footer><!-- /.post-info --></div>
                 <div class="summary"><p>最近几天尝试在Windows上面使用Pelican，刚开始也是直接想用pip安装，不料不少pelican依赖的包都没能下载。最后只好手动安装了这些没能自动装上的包。悲催的过程就不提了，就把需要手动安装的包列表记在这儿了：</p>
 <ul>
@@ -226,11 +227,6 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-    <a href="/tag/blog.html">
-        <i class="icon-tag icon-large"></i>Blog
-    </a>
-</li>
-<li class="tag-1">
     <a href="/tag/life.html">
         <i class="icon-tag icon-large"></i>Life
     </a>
@@ -240,7 +236,12 @@
         <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
-<li class="tag-4">
+<li class="tag-1">
+    <a href="/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-1">
     <a href="/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
     </a>
