--- a/categories.html
+++ b/categories.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Frantic1048">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://frantic1048.com/theme/css/bootstrap.min.css" type="text/css" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -30,10 +30,10 @@
         font-size: 6pt;
      }
     </style>
-    <link href="/theme/css/bootstrap-responsive.min.css" rel="stylesheet">
-        <link href="/theme/css/font-awesome.css" rel="stylesheet">
+    <link href="http://frantic1048.com/theme/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="http://frantic1048.com/theme/css/font-awesome.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments.css" rel="stylesheet">
+    <link href="http://frantic1048.com/theme/css/pygments.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -41,12 +41,12 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/theme/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/theme/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/theme/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/theme/images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="http://frantic1048.com/theme/images/favicon.ico">
+    <link rel="apple-touch-icon" href="http://frantic1048.com/theme/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://frantic1048.com/theme/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://frantic1048.com/theme/images/apple-touch-icon-114x114.png">
 
-    <link href="/" type="application/atom+xml" rel="alternate" title="Frantic World ATOM Feed" />
+    <link href="http://frantic1048.com/" type="application/atom+xml" rel="alternate" title="Frantic World ATOM Feed" />
     
   </head>
 
@@ -60,29 +60,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/index.html">Frantic World </a>
+          <a class="brand" href="http://frantic1048.com/index.html">Frantic World </a>
           <div class="nav-collapse">
             <ul class="nav">
-                                                          <li><a href="/pages/about.html">About</a></li>
+                                                          <li><a href="http://frantic1048.com/pages/about.html">About</a></li>
                                         <li class="divider-vertical"></li>
                                               <li >
-                    <a href="/category/blog.html">
+                    <a href="http://frantic1048.com/category/blog.html">
 						<i class="icon-folder-open icon-large"></i>Blog
 					</a>
                   </li>
                                 <li >
-                    <a href="/category/life.html">
+                    <a href="http://frantic1048.com/category/life.html">
 						<i class="icon-folder-open icon-large"></i>Life
 					</a>
                   </li>
                                 <li >
-                    <a href="/category/misc.html">
+                    <a href="http://frantic1048.com/category/misc.html">
 						<i class="icon-folder-open icon-large"></i>Misc
 					</a>
                   </li>
               
                           <ul class="nav pull-right">
-                                <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                                <li><a href="http://frantic1048.com/archives.html"><i class="icon-th-list"></i>Archives</a></li>
                           </ul>
 
             </ul>
@@ -105,49 +105,47 @@
                 <div class="span3 well sidebar-nav" id="sidebar">
             <ul class="nav nav-list">
 <li class="nav-header"><h4><i class="icon-external-link"></i>blogroll</h4></li>
-    <li><a href="#"><i class="icon-external-link"></i>---</a></li>
-    <li><a href="#"><i class="icon-external-link"></i>-----</a></li>
+    <li><a href="http://linuxzen.com/"><i class="icon-external-link"></i>cold</a></li>
 <li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
-<li><a href="/" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
-    <li><a href="#"><i class="icon-----sign icon-large"></i>---</a></li>
-    <li><a href="#"><i class="icon-----sign icon-large"></i>---</a></li>
+<li><a href="http://frantic1048.com/" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
+    <li><a href="http://tudou.com/home/FranticBlack"><i class="icon-Tudou-sign icon-large"></i>Tudou</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
-<a href="/category/blog.html">
+<a href="http://frantic1048.com/category/blog.html">
     <i class="icon-folder-open icon-large"></i>Blog
 </a>
 </li>
 <li>
-<a href="/category/life.html">
+<a href="http://frantic1048.com/category/life.html">
     <i class="icon-folder-open icon-large"></i>Life
 </a>
 </li>
 <li>
-<a href="/category/misc.html">
+<a href="http://frantic1048.com/category/misc.html">
     <i class="icon-folder-open icon-large"></i>Misc
 </a>
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-    <a href="/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
-    </a>
-</li>
-<li class="tag-1">
-    <a href="/tag/blog.html">
+    <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
     </a>
 </li>
 <li class="tag-1">
-    <a href="/tag/windows.html">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
@@ -183,7 +181,7 @@
 
     <!-- Le javascript -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/theme/js/jquery-1.7.2.min.js"></script>
-    <script src="/theme/js/bootstrap.min.js"></script>
+    <script src="http://frantic1048.com/theme/js/jquery-1.7.2.min.js"></script>
+    <script src="http://frantic1048.com/theme/js/bootstrap.min.js"></script>
   </body>
 </html>
