--- a/archives.html
+++ b/archives.html
@@ -99,6 +99,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>Wed 19 June 2013</dt>
+	<dd><a href='bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html'>博客诞生记:基于GitHub+Pelican创建博客的整个过程</a></dd>
 	<dt>Mon 17 June 2013</dt>
 	<dd><a href='gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html'>给windows添加用Notepad++打开的右键菜单</a></dd>
 	<dt>Mon 17 June 2013</dt>
@@ -135,6 +137,16 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-2">
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
@@ -145,14 +157,9 @@
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
-<li class="tag-1">
+<li class="tag-2">
     <a href="http://frantic1048.com/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
