--- a/tags.html
+++ b/tags.html
@@ -97,6 +97,16 @@
         <div class="span9" id="content">
             <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-2">
+	<a href="http://frantic1048.com/tag/pelican.html">
+		<i class="icon-tag icon-large"></i>Pelican
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://frantic1048.com/tag/github.html">
+		<i class="icon-tag icon-large"></i>Github
+	</a>
+</li>
 <li class="tag-1">
 	<a href="http://frantic1048.com/tag/blog.html">
 		<i class="icon-tag icon-large"></i>Blog
@@ -107,14 +117,9 @@
 		<i class="icon-tag icon-large"></i>Life
 	</a>
 </li>
-<li class="tag-1">
+<li class="tag-2">
 	<a href="http://frantic1048.com/tag/windows.html">
 		<i class="icon-tag icon-large"></i>Windows
-	</a>
-</li>
-<li class="tag-4">
-	<a href="http://frantic1048.com/tag/pelican.html">
-		<i class="icon-tag icon-large"></i>Pelican
 	</a>
 </li>
 </ul>
@@ -146,6 +151,16 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-2">
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
@@ -156,14 +171,9 @@
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
-<li class="tag-1">
+<li class="tag-2">
     <a href="http://frantic1048.com/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
