--- a/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
+++ b/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
@@ -182,6 +182,16 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-2">
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
@@ -192,14 +202,9 @@
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
-<li class="tag-1">
+<li class="tag-2">
     <a href="http://frantic1048.com/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
