--- a/my-super-beginng.html
+++ b/my-super-beginng.html
@@ -121,7 +121,7 @@
 
 <span class="label">Tags</span>
 	<a href="http://frantic1048.com/tag/life.html"><i class="icon-tag"></i>Life</a>
-	<a href="http://frantic1048.com/tag/blog.html"><i class="icon-tag"></i>blog</a>
+	<a href="http://frantic1048.com/tag/blog.html"><i class="icon-tag"></i>Blog</a>
 </footer><!-- /.post-info -->                </div>
                 <p>Frantic1048's Blog is beginning from NOW , HERE !</p>
                 </div><!-- /.entry-content -->
@@ -169,6 +169,16 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-2">
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
@@ -179,14 +189,9 @@
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
-<li class="tag-1">
+<li class="tag-2">
     <a href="http://frantic1048.com/tag/windows.html">
         <i class="icon-tag icon-large"></i>Windows
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 
