--- a/pages/about.html
+++ b/pages/about.html
@@ -102,7 +102,8 @@
 <h1>Me</h1>
 <p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
 <h1>License</h1>
-<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh"><img alt="知识共享许可协议" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />本站所有作品采用<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">CC BY-SA 3.0协议</a>进行许可。</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh"><img alt="知识共享许可协议" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />本站所有作品采用<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">CC BY-SA 3.0协议</a>进行许可。
+转载请注明来源。</p>
 </section>
         </div><!--/span-->
 
@@ -134,8 +135,8 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-2">
-    <a href="http://frantic1048.com/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
     </a>
 </li>
 <li class="tag-1">
@@ -143,19 +144,19 @@
         <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-2">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
+    <a href="http://frantic1048.com/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/github.html">
-        <i class="icon-tag icon-large"></i>Github
     </a>
 </li>
 
