--- a/archives.html
+++ b/archives.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Frantic1048">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="http://frantic1048.com/theme/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://frantic1048.com/theme/css/bootstrap.dark.css" type="text/css" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -30,7 +30,7 @@
         font-size: 6pt;
      }
     </style>
-    <link href="http://frantic1048.com/theme/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="http://frantic1048.com/theme/css/bootstrap-responsive.dark.css" rel="stylesheet">
         <link href="http://frantic1048.com/theme/css/font-awesome.css" rel="stylesheet">
 
     <link href="http://frantic1048.com/theme/css/pygments.css" rel="stylesheet">
@@ -99,6 +99,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>Wed 10 July 2013</dt>
+	<dd><a href='qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html'>去掉Pelican生成的代码区块中的红框</a></dd>
 	<dt>Wed 26 June 2013</dt>
 	<dd><a href='shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html'>手动删除Windows上的服务程序</a></dd>
 	<dt>Wed 19 June 2013</dt>
@@ -140,17 +142,7 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/github.html">
-        <i class="icon-tag icon-large"></i>Github
-    </a>
-</li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
-    </a>
-</li>
-<li class="tag-2">
     <a href="http://frantic1048.com/tag/pelican.html">
         <i class="icon-tag icon-large"></i>Pelican
     </a>
@@ -160,9 +152,29 @@
         <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/css.html">
+        <i class="icon-tag icon-large"></i>CSS
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/github.html">
+        <i class="icon-tag icon-large"></i>Github
+    </a>
+</li>
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pygment.html">
+        <i class="icon-tag icon-large"></i>pygment
     </a>
 </li>
 
@@ -179,7 +191,7 @@
                                 which takes great advantage of <a href="http://python.org">Python <i class="icon-external-link"></i></a>.
         </address><!-- /#about -->
 
-        <p>The theme is from <a href="http://twitter.github.com/bootstrap/">Bootstrap from Twitter <i class="icon-external-link"></i></a>,
+        <p>The theme is based on <a href="http://twitter.github.com/bootstrap/">Bootstrap from Twitter <i class="icon-external-link"></i></a>,
                    and <a href="http://fortawesome.github.com/Font-Awesome/">Font-Awesome <i class="icon-external-link"></i></a>, thanks!</p>
       </footer>
 
