--- a/archives.html
+++ b/archives.html
@@ -99,6 +99,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>Fri 12 July 2013</dt>
+	<dd><a href='pelican-themesguan-fang-wen-dang-fan-yi.html'>pelican-themes官方文档翻译</a></dd>
 	<dt>Wed 10 July 2013</dt>
 	<dd><a href='qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html'>去掉Pelican生成的代码区块中的红框</a></dd>
 	<dt>Wed 26 June 2013</dt>
@@ -143,8 +145,23 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/translation.html">
+        <i class="icon-tag icon-large"></i>Translation
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pygment.html">
+        <i class="icon-tag icon-large"></i>pygment
     </a>
 </li>
 <li class="tag-4">
@@ -153,8 +170,8 @@
     </a>
 </li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
+    <a href="http://frantic1048.com/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 <li class="tag-4">
@@ -165,16 +182,6 @@
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pygment.html">
-        <i class="icon-tag icon-large"></i>pygment
-    </a>
-</li>
-<li class="tag-1">
-    <a href="http://frantic1048.com/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
