--- a/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
+++ b/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
@@ -174,8 +174,23 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/translation.html">
+        <i class="icon-tag icon-large"></i>Translation
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pygment.html">
+        <i class="icon-tag icon-large"></i>pygment
     </a>
 </li>
 <li class="tag-4">
@@ -184,8 +199,8 @@
     </a>
 </li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
+    <a href="http://frantic1048.com/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 <li class="tag-4">
@@ -196,16 +211,6 @@
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pygment.html">
-        <i class="icon-tag icon-large"></i>pygment
-    </a>
-</li>
-<li class="tag-1">
-    <a href="http://frantic1048.com/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
