--- a/tags.html
+++ b/tags.html
@@ -98,8 +98,23 @@
             <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-	<a href="http://frantic1048.com/tag/windows.html">
-		<i class="icon-tag icon-large"></i>Windows
+	<a href="http://frantic1048.com/tag/pelican.html">
+		<i class="icon-tag icon-large"></i>Pelican
+	</a>
+</li>
+<li class="tag-1">
+	<a href="http://frantic1048.com/tag/life.html">
+		<i class="icon-tag icon-large"></i>Life
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://frantic1048.com/tag/translation.html">
+		<i class="icon-tag icon-large"></i>Translation
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://frantic1048.com/tag/pygment.html">
+		<i class="icon-tag icon-large"></i>pygment
 	</a>
 </li>
 <li class="tag-4">
@@ -108,8 +123,8 @@
 	</a>
 </li>
 <li class="tag-1">
-	<a href="http://frantic1048.com/tag/pelican.html">
-		<i class="icon-tag icon-large"></i>Pelican
+	<a href="http://frantic1048.com/tag/windows.html">
+		<i class="icon-tag icon-large"></i>Windows
 	</a>
 </li>
 <li class="tag-4">
@@ -120,16 +135,6 @@
 <li class="tag-1">
 	<a href="http://frantic1048.com/tag/blog.html">
 		<i class="icon-tag icon-large"></i>Blog
-	</a>
-</li>
-<li class="tag-4">
-	<a href="http://frantic1048.com/tag/pygment.html">
-		<i class="icon-tag icon-large"></i>pygment
-	</a>
-</li>
-<li class="tag-1">
-	<a href="http://frantic1048.com/tag/life.html">
-		<i class="icon-tag icon-large"></i>Life
 	</a>
 </li>
 </ul>
@@ -163,8 +168,23 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/translation.html">
+        <i class="icon-tag icon-large"></i>Translation
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pygment.html">
+        <i class="icon-tag icon-large"></i>pygment
     </a>
 </li>
 <li class="tag-4">
@@ -173,8 +193,8 @@
     </a>
 </li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
+    <a href="http://frantic1048.com/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 <li class="tag-4">
@@ -185,16 +205,6 @@
 <li class="tag-1">
     <a href="http://frantic1048.com/tag/blog.html">
         <i class="icon-tag icon-large"></i>Blog
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pygment.html">
-        <i class="icon-tag icon-large"></i>pygment
-    </a>
-</li>
-<li class="tag-1">
-    <a href="http://frantic1048.com/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
