--- a/archives.html
+++ b/archives.html
@@ -100,6 +100,8 @@
 
 <dl>
 	<dt>Fri 12 July 2013</dt>
+	<dd><a href='fan-yi-ru-he-wei-pelicanzhi-zuo-zhu-ti-wu-xian-xiu-ding-zhong.html'>翻译：如何为pelican制作主题（无限修订中）</a></dd>
+	<dt>Fri 12 July 2013</dt>
 	<dd><a href='pelican-themesguan-fang-wen-dang-fan-yi.html'>pelican-themes官方文档翻译</a></dd>
 	<dt>Wed 10 July 2013</dt>
 	<dd><a href='qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html'>去掉Pelican生成的代码区块中的红框</a></dd>
@@ -125,6 +127,7 @@
 <li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
 <li><a href="http://frantic1048.com/" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
     <li><a href="http://tudou.com/home/FranticBlack"><i class="icon-Tudou-sign icon-large"></i>Tudou</a></li>
+    <li><a href="https://github.com/frantic1048"><i class="icon-Github-sign icon-large"></i>Github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
@@ -144,24 +147,9 @@
 </li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
-<li class="tag-1">
-    <a href="http://frantic1048.com/tag/pelican.html">
-        <i class="icon-tag icon-large"></i>Pelican
-    </a>
-</li>
-<li class="tag-1">
-    <a href="http://frantic1048.com/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
-    </a>
-</li>
-<li class="tag-4">
+<li class="tag-2">
     <a href="http://frantic1048.com/tag/translation.html">
         <i class="icon-tag icon-large"></i>Translation
-    </a>
-</li>
-<li class="tag-4">
-    <a href="http://frantic1048.com/tag/pygment.html">
-        <i class="icon-tag icon-large"></i>pygment
     </a>
 </li>
 <li class="tag-4">
@@ -170,8 +158,18 @@
     </a>
 </li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/windows.html">
-        <i class="icon-tag icon-large"></i>Windows
+    <a href="http://frantic1048.com/tag/blog.html">
+        <i class="icon-tag icon-large"></i>Blog
+    </a>
+</li>
+<li class="tag-4">
+    <a href="http://frantic1048.com/tag/pygment.html">
+        <i class="icon-tag icon-large"></i>pygment
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 <li class="tag-4">
@@ -180,8 +178,13 @@
     </a>
 </li>
 <li class="tag-1">
-    <a href="http://frantic1048.com/tag/blog.html">
-        <i class="icon-tag icon-large"></i>Blog
+    <a href="http://frantic1048.com/tag/pelican.html">
+        <i class="icon-tag icon-large"></i>Pelican
+    </a>
+</li>
+<li class="tag-1">
+    <a href="http://frantic1048.com/tag/windows.html">
+        <i class="icon-tag icon-large"></i>Windows
     </a>
 </li>
 
