--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 				alt ="Frantic World" />
 			</map>
 		</div>
+
+		<div id="charcontainer">
+		<div class = charf></div>
+		<div class = charr></div>
+		<div class = chara></div>
+		<div class = charn></div>
+		<div class = chart></div>
+		<div class = chari></div>
+		<div class = charC></div>
+		</div>
 </body>
 </body>
 </html>
