--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		<div class = charn></div>
 		<div class = chart></div>
 		<div class = chari></div>
-		<div class = charC></div>
+		<div class = charc></div>
+		</div>
+		
 		</div>
 </body>
 </body>
