--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="zh">
 <head>
-	<title>Frantic World|Constructing...</title>
+	<title>Frantic World|Home</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Frantic1048">
