--- a/index2.html
+++ b/index2.html
@@ -4,12 +4,12 @@
 		<title>Frantic World</title>
 	<meta charset="utf-8" />
     <meta name="author" content="Frantic1048">
-	<link rel="stylesheet" href="/theme/css/franticworld.css" type="text/css" />
-	<link href="/theme/css/pygments.css" rel="stylesheet">
+	<link rel="stylesheet" href="http://frantic1048.com/theme/css/franticworld.css" type="text/css" />
+	<link href="http://frantic1048.com/theme/css/pygments.css" rel="stylesheet">
 	</head>
-<body background="./theme/img/pattern.png">
+<body background="http://frantic1048.com/theme/img/pattern.png">
 		<div class="nav-banner">
-		<a href="">Frantic World</a>
+		<a href="http://frantic1048.com">Frantic World</a>
 		</div>
 		
 		<div class="content">
@@ -115,7 +115,7 @@
 </div>
 
 <p class="paginator">
-                        <a href="/index.html">&laquo;</a>
+                        <a href="http://frantic1048.com/index.html">&laquo;</a>
                 Page 2 / 2
     </p>
 		</div>
@@ -123,11 +123,11 @@
 		<div class="sidebar">
 		<div class="sidebarcategory">
 <h4>Categories</h4>
-	<li><a href="/category/blog.html">Blog</a></li>
-	<li><a href="/category/life.html">Life</a></li>
-	<li><a href="/category/linux.html">Linux</a></li>
-	<li><a href="/category/misc.html">Misc</a></li>
-	<li><a href="/category/web.html">Web</a></li>
+	<li><a href="http://frantic1048.com/category/blog.html">Blog</a></li>
+	<li><a href="http://frantic1048.com/category/life.html">Life</a></li>
+	<li><a href="http://frantic1048.com/category/linux.html">Linux</a></li>
+	<li><a href="http://frantic1048.com/category/misc.html">Misc</a></li>
+	<li><a href="http://frantic1048.com/category/web.html">Web</a></li>
 </div>
 
 <div class="sidebarpages">
