--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 <p class="paginator">
         Page 1 / 2
-            <a href="http://frantic1048.com/index2.html">&raquo;</a>
+            <a href="http://frantic1048.com/index2.html">next&raquo;</a>
     </p>
 		</div>
 		
