--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,7 @@
 </div>
 
 <p class="paginator">
-                        <a href="http://frantic1048.com/index.html">&laquo;</a>
+                        <a href="http://frantic1048.com/index.html">&laquo;prev</a>
                 Page 2 / 2
     </p>
 		</div>
