bring back my pages

--- a/archives.html
+++ b/archives.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>Frantic World</title>
 	<meta charset="utf-8" />
@@ -31,8 +31,6 @@
 	<dd><a href='tong-guo-zi-ti-wen-jian-gei-archan-zhuang-zi-ti.html'>通过字体文件给Arch安装字体</a></dd>
 	<dt>12 Jul,2013</dt>
 	<dd><a href='fan-yi-pelican-themesguan-fang-wen-dang.html'>翻译：pelican-themes官方文档</a></dd>
-	<dt>12 Jul,2013</dt>
-	<dd><a href='fan-yi-ru-he-wei-pelicanzhi-zuo-zhu-ti-wu-xian-xiu-ding-zhong.html'>翻译：如何为pelican制作主题（无限修订中）</a></dd>
 	<dt>10 Jul,2013</dt>
 	<dd><a href='qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html'>去掉Pelican生成的代码区块中的红框</a></dd>
 	<dt>26 Jun,2013</dt>
@@ -60,7 +58,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
