--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>Frantic World</title>
 	<meta charset="utf-8" />
@@ -14,40 +14,6 @@
 		
 		<div class="content">
 		
-<div class="summarycontainer">
-	<div class="metabox">
-		<p class="metaday">170</p>
-		<p class="metayear">2013</p>
-		<p class="metacategory">Blog</p>
-	</div>
-	<div class="summarybox">
-		<a class="summarytitle" href="/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html " >博客诞生记:基于GitHub+Pelican创建博客的整个过程</a>
-		<p>很早以前就想搭建一个独立博客，一点点的记录生活与学习，说到底，还不是是因为托管博客的限制颇多，编辑体验太差 +_+
-本文记录了我建立博客的基本过程，希望能对想要建博客却跟我一样完全不懂web的小白有所帮助。</p>
-<p>阅读本文所需技能：</p>
-<ul>
-<li>脑补精通 Lv1：脑补基础</li>
-<li>举一反三 Lv1：举一反三分之一</li>
-<li>英文掌握 Lv2：字母精通</li>
-<li>Linux掌握 Lv1：会开终端</li>
-</ul>
-<p>在谋划阶段，看了不少关于建博的路子，最后图简单我选择了用Pelican在GitHub上搭建博客的路子。</p>
-<p>整个过程所在平台：<a href="http://www.chakra-linux.org/">Chakra Linux</a>，Pelican版本：3.2.0</p>
-<hr />
-<h1>过程概要</h1>
-<ol>
-<li>在<a href="https://github.com/">Github</a>上创建工程</li>
-<li>安装配置pelican和git，以及准备工作</li>
-<li>开始写博客</li>
-</ol>
-<hr />
-<h1>详细步骤</h1>
-<h2>在GitHub上创建工程</h2>
-<p>如果你还没有<a href="https://github.com/">GitHub</a>账户，去注册一个~</p>
-<p>登录GitHub，点击页面顶部的显示你用户名位置右边的<em>创建新工程</em> <code>(Create a new ...</code></p>
-		<a class="btnmore" href="/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html">more ...</a>
-	</div>
-</div>
 <div class="summarycontainer">
 	<div class="metabox">
 		<p class="metaday">168</p>
@@ -131,7 +97,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
