--- a/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
+++ b/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>手动删除Windows上的服务程序 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -58,7 +58,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
