--- a/fan-yi-pelican-themesguan-fang-wen-dang.html
+++ b/fan-yi-pelican-themesguan-fang-wen-dang.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>翻译：pelican-themes官方文档 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -172,7 +172,9 @@ simple  </p>
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
