--- a/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
+++ b/gei-windowstian-jia-yong-notepadda-kai-de-you-jian-cai-dan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>给windows添加用Notepad++打开的右键菜单 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -68,7 +68,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
