--- a/jie-jue-kdeying-yong-cai-dan-bu-xian-shi-winecheng-xu-zu-de-wen-ti.html
+++ b/jie-jue-kdeying-yong-cai-dan-bu-xian-shi-winecheng-xu-zu-de-wen-ti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>解决KDE应用菜单不显示wine程序组的问题 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -60,7 +60,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
