--- a/my-super-beginng.html
+++ b/my-super-beginng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
 		<title>My Super Beginng | Frantic World</title>
 	<meta charset="utf-8" />
@@ -54,7 +54,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
