--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 	</div>
 	<div class="summarybox">
 		<a class="summarytitle" href="/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html " >博客诞生记:基于GitHub+Pelican创建博客的整个过程</a>
-		<p>很早以前就想搭建一个独立博客，一点点的记录生活与学习，说到底，还不是是因为托管博客的限制颇多，编辑体验太差 +_+
+		<p>很早以前就想搭建一个独立博客，一点点的记录生活与学习，说到底，还不是因为托管博客的限制颇多，编辑体验太差 +_+
 本文记录了我建立博客的基本过程，希望能对想要建博客却跟我一样完全不懂web的小白有所帮助。</p>
 <p>阅读本文所需技能：</p>
 <ul>
