--- a/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
+++ b/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
@@ -45,12 +45,12 @@
 <h2>在GitHub上创建工程</h2>
 <p>如果你还没有<a href="https://github.com/">GitHub</a>账户，去注册一个~</p>
 <p>登录GitHub，点击页面顶部的显示你用户名位置右边的<em>创建新工程</em> <code>(Create a new repo)</code> 按钮，来到创建新工程页面</p>
-<p><img alt="" src="./static/img/create-a-new-repo.png" /></p>
+<p><img alt="" src="http://frantic1048.com/static/img/create-a-new-repo.png" /></p>
 <p>建立一个名为<code>xxx.github.com</code>的工程，这里我用的是frantic1048，我已经创建好了，所以提示已存在。</p>
-<p><img alt="" src="./static/img/craate-a-new-repo2.png" /></p>
+<p><img alt="" src="http://frantic1048.com/static/img/craate-a-new-repo2.png" /></p>
 <p>填写好工程名后，点击下方的<em>创建工程</em><code>（Create repository）</code>按钮。</p>
 <p>接下来进入项目的设置页面，在<code>GitHub Pages</code>这栏（我因为已经创建过页面了所以有提示"Your site is published at ......"），点击<code>Automatic Page Generator</code>，接下来几步一路<code>continue</code>就可以了，因为生成的页面在随后会被清空。</p>
-<p><img alt="" src="./static/img/auto-generator.png" /></p>
+<p><img alt="" src="http://frantic1048.com/static/img/auto-generator.png" /></p>
 <p>这步完成之后，通过<code>http://xxx.github.com/</code>或者<code>http://xxx.github.io/</code>就可以访问生成的页面了，如果你遇到404错误，别着急，第一次生成完大概十来分钟才能看到页面，这个时候先来看下一步吧。</p>
 <h2>安装配置pelican和git，以及准备工作</h2>
 <p><strong>pelican的安装</strong>:根据pelican官方的推荐，我使用pip安装，而pip的安装又依赖distribute,整合3方的安装指南，我使用的终端命令如下：</p>
