--- a/pages/demo-pure-css-tooltip.html
+++ b/pages/demo-pure-css-tooltip.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="demo-pure-css-tooltip.css" type="text/css" />
     <meta charset="utf8" />
 </head>
-<body background-image=url("http://frantic1048.com/theme/static/img/pattern.png")>
+<body background="http://frantic1048.com/theme/static/img/pattern.png">
     <div class="tooltip-wrapper">
         <span><a href="#">AB</a><span class="tooltip">Angel Beats!</span></span>
         <span><a href="#">SAO</a><span class="tooltip">Sword Art Online</span></span>
