--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>13 Jan,2014</dt>
+	<dd><a href='xiu-fu-arch-linuxde-yin-dao.html'>修复Arch Linux的引导</a></dd>
 	<dt>08 Oct,2013</dt>
 	<dd><a href='chun-csszhi-zuo-tooltip.html'>纯CSS制作tooltip</a></dd>
 	<dt>19 Sep,2013</dt>
