--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,22 @@
 		
 <div class="summarycontainer">
 	<div class="metabox">
+		<p class="metaday">177</p>
+		<p class="metayear">2013</p>
+		<p class="metacategory">Misc</p>
+	</div>
+	<div class="summarybox">
+		<a class="summarytitle" href="/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html " >手动删除Windows上的服务程序</a>
+		<p>好多软件在卸载的时候不会卸载自己安装的服务程序，而且不知道什么时候还会被继续装上，前些天莫名其妙被装上风行就是这情况。</p>
+<p>我先用<code>iobit unistaller</code>把它卸载了，最后弄完发现系统进程里面竟然还有风行的服务程序，我打开进程目录一看，甚至连安装包都还在那个目录下面，而且这还是一个相当庞大的目录！</p>
+<p>二话不说，先把服务程序和安装程序都给加到HIPS的Block List中去，总之再也不想见到它，接下来就是删除这个风行制造的目录。</p>
+<p>之后还要在注册表中删除那个服务程序的键，否则的话你一直都会在系统的服务列表里面看到它。</p>
+<p>在注册表<code>LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services</code>中找到你要删除的服务程序，直接删掉即可。</p>
+		<a class="btnmore" href="/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html">more ...</a>
+	</div>
+</div>
+<div class="summarycontainer">
+	<div class="metabox">
 		<p class="metaday">170</p>
 		<p class="metayear">2013</p>
 		<p class="metacategory">Blog</p>
