--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>01 Mar,2014</dt>
+	<dd><a href='yong-smplayersheng-cheng-shi-pin-yu-lan.html'>用SMPlayer生成视频预览</a></dd>
 	<dt>13 Jan,2014</dt>
 	<dd><a href='xiu-fu-arch-linuxde-yin-dao.html'>修复Arch Linux的引导</a></dd>
 	<dt>08 Oct,2013</dt>
@@ -62,9 +64,7 @@
 </div>
 
 <div class="sidebarpages">
-	<h4>Pages</h4>
-			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
-	</div>
+</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
