updated cold's blog adress

--- a/archives.html
+++ b/archives.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>Frantic World</title>
 	<meta charset="utf-8" />
@@ -36,7 +36,7 @@
 	<dt>10 Aug,2013</dt>
 	<dd><a href='tong-guo-zi-ti-wen-jian-gei-archan-zhuang-zi-ti.html'>通过字体文件给Arch安装字体</a></dd>
 	<dt>12 Jul,2013</dt>
-	<dd><a href='fan-yi-pelican-themesguan-fang-wen-dang.html'>翻译：pelican-themes官方文档</a></dd>
+	<dd><a href='yi-pelican-themesguan-fang-wen-dang.html'>[译]pelican-themes官方文档</a></dd>
 	<dt>10 Jul,2013</dt>
 	<dd><a href='qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html'>去掉Pelican生成的代码区块中的红框</a></dd>
 	<dt>26 Jun,2013</dt>
@@ -68,7 +68,7 @@
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
