--- a/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
+++ b/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>博客诞生记:基于GitHub+Pelican创建博客的整个过程 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -295,7 +295,7 @@ PLUGINS = ["sitemap"]</p>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
