--- a/qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html
+++ b/qu-diao-pelicansheng-cheng-de-dai-ma-qu-kuai-zhong-de-hong-kuang.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>去掉Pelican生成的代码区块中的红框 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -68,7 +68,7 @@
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
