--- a/shi-yong-google-fontsfeng-fu-wang-ye-de-zi-ti.html
+++ b/shi-yong-google-fontsfeng-fu-wang-ye-de-zi-ti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>使用Google Fonts丰富网页的字体 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -72,7 +72,7 @@
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
