--- a/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
+++ b/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>手动删除Windows上的服务程序 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -62,7 +62,7 @@
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
