--- a/zai-linuxxia-yong-gccbian-yi-ccheng-xu.html
+++ b/zai-linuxxia-yong-gccbian-yi-ccheng-xu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh">
 <head>
 		<title>在Linux下用GCC编译C程序 | Frantic World</title>
 	<meta charset="utf-8" />
@@ -90,7 +90,7 @@
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
-    <li><a href="http://linuxzen.com/" target="_blank">cold</a></li>
+    <li><a href="http://www.linuxzen.com/" target="_blank">cold</a></li>
     <li><a href="http://www.dongxf.com/" target="_blank">晓风</a></li>
     <li><a href="http://www.pythontip.com/home" target="_blank">一人一python</a></li>
 </div>
