meta of impressjs demo

--- a/pages/demo-impressjs-presentation/index.html
+++ b/pages/demo-impressjs-presentation/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Impressive Words in Animes | by Jiahao Guo</title>
+    <title>Impressive Words in Animes | by Frantic1048</title>
     
     <meta name="description" content="Impress Words in Animes" />
-    <meta name="author" content="Jiahao Guo" />
+    <meta name="author" content="Frantic1048" />
 
     <link href="css/impress-style.css" rel="stylesheet" />
 
