--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>12 May,2014</dt>
+	<dd><a href='linuxxia-tong-guo-cuefen-gui-cheng-flac.html'>Linux下通过cue分轨成flac</a></dd>
 	<dt>01 Mar,2014</dt>
 	<dd><a href='yong-smplayersheng-cheng-shi-pin-yu-lan.html'>用SMPlayer生成视频预览</a></dd>
 	<dt>13 Jan,2014</dt>
@@ -64,7 +66,9 @@
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
