--- a/yi-pelican-themesguan-fang-wen-dang.html
+++ b/yi-pelican-themesguan-fang-wen-dang.html
@@ -172,7 +172,9 @@ simple  </p>
 </div>
 
 <div class="sidebarpages">
-</div>
+	<h4>Pages</h4>
+			<li><a href="http://frantic1048.com/pages/about.html">About</a></li>
+	</div>
 
 <div class="sidebarblogroll">
 <h4>Blogroll</h4>
