--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>20 May,2014</dt>
+	<dd><a href='krita-28-kuai-jie-jian.html'>Krita 2.8 快捷键</a></dd>
 	<dt>12 May,2014</dt>
 	<dd><a href='linuxxia-tong-guo-cuefen-gui-cheng-flac.html'>Linux下通过cue分轨成flac</a></dd>
 	<dt>01 Mar,2014</dt>
