--- a/krita-28-kuai-jie-jian.html
+++ b/krita-28-kuai-jie-jian.html
@@ -22,7 +22,7 @@
 <div class="arcticlecontentbox">
 	<div class="articlecontent">
 		<a class="articletitle" href="/krita-28-kuai-jie-jian.html " >Krita 2.8 快捷键</a>
-		<p><a target="_blank" href="krita-2-8-shortcuts-sheet-dark-chinese.png"><img alt="" src="http://frantic1048.com/static/img/krita-2-8-shortcuts-sheet-dark-chinese.png" style="max-width:780px;"/></a></p>
+		<p><a target="_blank" href="http://frantic1048.com/static/img/krita-2-8-shortcuts-sheet-dark-chinese.png"><img alt="" src="http://frantic1048.com/static/img/krita-2-8-shortcuts-sheet-dark-chinese.png" style="max-width:780px;"/></a></p>
 <p>点开可看大图</p>
 <p>快捷键这东西，用了才发现这么方便。</p>
 	</div>
